--- a/provision.yml
+++ b/provision.yml
@@ -35,9 +35,10 @@
 
   - name: Installing Additional Packages
     yum:
-      name={{ item }}
-      state=present
-    with_items:
+      name: "{{ packages }}"
+      state: present
+    vars:
+      packages:
       - epel-release
       - nano
       - git
@@ -50,9 +51,10 @@
 
   - name: Installing MariaDB Items
     yum:
-      name={{ item }}
-      state=present
-    with_items:
+      name: "{{ packages }}"
+      state: present
+    vars:
+      packages:
       - MariaDB-server
       - MariaDB-client
       - MariaDB-connect-engine
